# pci-dss-mcp

./: .mcp.json  README.md  pyproject.toml  server.py  smithery.yaml
.well-known/mcp/: server-card.json
